# multinucleotide_mutations

./: README.md  pyproject.toml
.github/workflows/: tests.yml
src/mnm_mutations/: __init__.py  mutants.py
tests/: test_mutants.py
